docs/style.css
@import url('https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap');

*{
    margin:0;
    padding:0;
    
}
body{
    background-color: rgb(240,240,240);

}
h1 {
    font-family: 'Pattaya', sans-serif;
    text-align: center;
    padding-top: 2%;
    padding-bottom: 2%;
}
h2{
    text-align: center;
    font-family: 'Pattaya', sans-serif;
}
p{
    text-align: center;
    font-family: 'Roboto', sans-serif;
}
.container {
    margin: auto auto;
    width: 475px;
    height: 475px;
    background-color: rgb(26, 25, 25);
    display: grid;
    grid-template-columns: 200px 200px;
    border-radius: 10px;
    box-sizing:border-box;
    justify-content: space-evenly;
    align-content: space-evenly;

}
.box{
    border-radius: 10px;
    width: 200px;
    height: 200px;
    box-sizing: border-box;

}

.red {
    background-color: rgb(221, 31, 44);
    color: rgb(221, 31, 44);
}

.blue {
    background-color: rgb(14, 116, 212);
    color: rgb(14, 116, 212);
}

.green {
    background-color: rgb(43, 201, 56);
    color: rgb(43, 201, 56);
}

.yellow {
    background-color: rgb(241, 241, 80);
    color: rgb(241, 241, 80);
}

.flash {
    background-color: rgb(230, 230, 230);
    color: black;
    text-align: center;
    font-size: 40px;
    padding: 90px 0;
}

.buttons {
    text-align: center;
    padding-top: 1%;
    padding-bottom: 1%;
    margin-left: 2%;
    margin-right: 2%;
}

button {
    padding-left: 2%;
    padding-right: 2%;
}

@media screen and (max-width: 600px) {
    *{
        margin:0;
        padding:0;
        
    }
    body{
        background-color: rgb(240,240,240);
    
    }
    h1 {
        font-family: 'Pattaya', sans-serif;
        text-align: center;
        padding-top: 1%;
        padding-bottom: 1%;
    }
    h2{
        font-family: 'Pattaya', sans-serif;
        padding: 1%;
        text-align: center;
    }
    p{
        font-family: 'Roboto', sans-serif;
    }
    .container {
        margin: auto auto;
        width: 250px;
        height: 250px;
        background-color: rgb(44,44,44);
        display: grid;
        grid-template-columns: 100px 100px;
        border-radius: 10px;
        box-sizing:border-box;
        justify-content: space-evenly;
        align-content: space-evenly;
    
    }
    .box{
        border-radius: 10px;
        width: 100px;
        height: 100px;
        box-sizing: border-box;
    
    }
    

    p {
        padding: 1%;
        text-align: center;
    }
    
}

@media screen and (min-width: 1000px) {
    body{
        background-color: aquamarine;
    }
}
/* sources:
for 2x2 css grid -
https://www.digitalocean.com/community/tutorials/css-align-justify 
https://css-tricks.com/snippets/css/complete-guide-grid/

for media query - 
https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Media_queries

for buttons -
https://www.w3schools.com/css/css3_buttons.asp

*/

